# 3D-Drone-Racing-Lite

./: CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
data/logs/: drone_log.csv
include/glad/: glad.h
src/: glad.c  main.cpp
src/controls/: controls.cpp  controls.h
src/mission/: mission.cpp  mission.h
src/physics/: debug_drawer.cpp  debug_drawer.h  physics.cpp  physics.h
src/renderer/: renderer.cpp  renderer.h
